fix query in product repository